--- a/protocols/bsbport/config.in
+++ b/protocols/bsbport/config.in
@@ -18,11 +18,14 @@ if [ "$BSBPORT_SUPPORT" = y -o $USARTS -gt $USARTS_USED ]; then
 		int    "BSBPort Message Max Length" BSBPORT_MESSAGE_MAX_LEN 25
 		int    'BSBPORT Address' BSBPORT_OWNADDRESS 7
 		dep_bool 'BSBPORT Polling Support' BSBPORT_POLLING_SUPPORT $BSBPORT_SUPPORT
+		dep_bool 'BSBPORT ECMD Support' BSBPORT_ECMD_SUPPORT $ECMD_SUPPORT
+		dep_bool 'BSBPORT MQTT Support' BSBPORT_MQTT_SUPPORT $MQTT_SUPPORT
 	comment  "Debugging Flags"
 	dep_bool 'BSBPORT Debug Rx' DEBUG_BSBPORT_RX $BSBPORT_SUPPORT
 	dep_bool 'BSBPORT Debug Tx' DEBUG_BSBPORT_TX $BSBPORT_SUPPORT
 	dep_bool 'BSBPORT Debug Message Parsing' DEBUG_BSBPORT_PARSE $BSBPORT_SUPPORT
 	dep_bool 'BSBPORT Debug ECMD Output' DEBUG_BSBPORT_ECMD $BSBPORT_SUPPORT
+	dep_bool 'BSBPORT Debug MQTT' DEBUG_BSBPORT_MQTT $BSBPORT_SUPPORT
 	endmenu
 else
 	define_bool BSBPORT_SUPPORT n
