--- a/protocols/ecmd/config.in
+++ b/protocols/ecmd/config.in
@@ -24,7 +24,7 @@ dep_bool_menu "ECMD (Ethersex Command) support" ECMD_PARSER_SUPPORT
     if [ "$ECMD_SERIAL_USART_SUPPORT" = y ]; then
       choice '  Ecmd usart select' "$(usart_choice ECMD_SERIAL_USART)"
       usart_process_choice ECMD_SERIAL_USART
-      dep_bool "  No Echo" ECMD_SERIAL_NO_ECHO $ECMD_SERIAL_USART_SUPPORT
+      dep_bool "  No Echo" ECMD_SERIAL_USART_NO_ECHO $ECMD_SERIAL_USART_SUPPORT
       int "  USART Baudrate" ECMD_SERIAL_BAUDRATE 115200
       int "  USART buffer length" ECMD_SERIAL_USART_BUFFER_LEN 50
       if [ $ECMD_SERIAL_USART_BUFFER_LEN -gt 255 ]; then
